# gpdb

./: .gitignore  .gitmodules  CMakeLists.txt
contrib/ext_fdw/: Makefile  README.md  (+3 more)
src/backend/: CMakeLists.txt  Makefile  authserver.c  pthread.c  pthread.h
src/backend/access/: CMakeLists.txt
src/backend/access/aocs/: CMakeLists.txt
src/backend/access/appendonly/: CMakeLists.txt
src/backend/access/bitmap/: CMakeLists.txt
src/backend/access/common/: CMakeLists.txt  heaptuple.c
src/backend/access/gin/: CMakeLists.txt
src/backend/access/gist/: CMakeLists.txt
src/backend/access/hash/: CMakeLists.txt
src/backend/access/heap/: CMakeLists.txt
src/backend/access/index/: CMakeLists.txt
src/backend/access/nbtree/: CMakeLists.txt
src/backend/access/rmgrdesc/: CMakeLists.txt
src/backend/access/spgist/: CMakeLists.txt
src/backend/access/transam/: CMakeLists.txt  xact.c
src/backend/bootstrap/: CMakeLists.txt
src/backend/catalog/: CMakeLists.txt  Makefile  pg_extprotocol.c  system_views.sql
src/backend/cdb/: CMakeLists.txt  cdbcat.c  cdbcopy.c  cdbllize.c  cdbmutate.c  cdbsreh.c  cdbthreadlog.c  cdbutil.c  cdbvars.c
src/backend/cdb/dispatcher/: CMakeLists.txt  cdbconn.c  cdbdisp.c  cdbdisp_async.c  cdbdisp_query.c  cdbdisp_thread.c  cdbdispatchresult.c  cdbgang_async.c
src/backend/cdb/endpoint/: README  cdbendpoint.c  cdbendpoint_private.h  cdbendpointinternal.h  cdbendpointretrieve.c  cdbendpointutils.c
src/backend/cdb/motion/: CMakeLists.txt  ic_tcp.c  ic_udpifc.c
src/backend/commands/: CMakeLists.txt  copy.c  explain.c  explain_gp.c  exttablecmds.c  foreigncmds.c  portalcmds.c  tablecmds.c  tablecmds_gp.c  user.c
src/backend/executor/: CMakeLists.txt  execMain.c  execQual.c  execUtils.c  nodeForeignscan.c  nodeMotion.c  spi.c
src/backend/foreign/: CMakeLists.txt
src/backend/fts/: CMakeLists.txt  fts.c  ftsprobe.c
src/backend/gpopt/: gpdbwrappers.cpp
src/backend/gpopt/translate/: CTranslatorDXLToPlStmt.cpp  CTranslatorRelcacheToDXL.cpp
src/backend/lib/: CMakeLists.txt
src/backend/libpq/: CMakeLists.txt  auth.c  pqcomm.c
src/backend/main/: CMakeLists.txt
src/backend/nodes/: CMakeLists.txt  copyfuncs.c  equalfuncs.c  outfuncs.c  readfast.c
src/backend/optimizer/: CMakeLists.txt
src/backend/optimizer/path/: CMakeLists.txt
src/backend/optimizer/plan/: CMakeLists.txt  plangroupext.c  planner.c
src/backend/optimizer/prep/: CMakeLists.txt
src/backend/optimizer/util/: CMakeLists.txt
src/backend/parser/: CMakeLists.txt  analyze.c  gram.y  parse_utilcmd.c  scan.c.in
src/backend/port/: CMakeLists.txt
src/backend/port/win32/: pthread.c
src/backend/postmaster/: CMakeLists.txt  backoff.c  perfmon_segmentinfo.c  postmaster.c  syslogger.c
src/backend/regex/: CMakeLists.txt
src/backend/replication/: CMakeLists.txt  gp_replication.c  walsender.c
src/backend/rewrite/: CMakeLists.txt
src/backend/snowball/: CMakeLists.txt
src/backend/snowball/libstemmer/: CMakeLists.txt
src/backend/storage/: CMakeLists.txt
src/backend/storage/buffer/: CMakeLists.txt
src/backend/storage/file/: CMakeLists.txt  fd.c  reinit.c
src/backend/storage/freespace/: CMakeLists.txt
src/backend/storage/ipc/: CMakeLists.txt  ipci.c  latch.c  pmsignal.c  shm_mq.c
src/backend/storage/large_object/: CMakeLists.txt
src/backend/storage/lmgr/: CMakeLists.txt  lwlocknames.txt  proc.c
src/backend/storage/page/: CMakeLists.txt
src/backend/storage/smgr/: CMakeLists.txt
src/backend/tcop/: CMakeLists.txt  fastpath.c  postgres.c  pquery.c  utility.c
src/backend/tsearch/: CMakeLists.txt
src/backend/utils/: CMakeLists.txt  probes.h.win32
src/backend/utils/adt/: CMakeLists.txt  complex_type.c  dbsize.c  pg_locale.c  timestamp.c
src/backend/utils/cache/: CMakeLists.txt  relcache.c  typcache.c
src/backend/utils/datumstream/: CMakeLists.txt
src/backend/utils/error/: CMakeLists.txt  elog.c
src/backend/utils/fmgr/: CMakeLists.txt
src/backend/utils/gdd/: CMakeLists.txt  gddbackend.c
src/backend/utils/gp/: CMakeLists.txt
src/backend/utils/gpmon/: CMakeLists.txt
src/backend/utils/hash/: CMakeLists.txt
src/backend/utils/hyperloglog/: CMakeLists.txt  gp_hyperloglog.c  hyperloglog.c
src/backend/utils/init/: CMakeLists.txt  postinit.c
src/backend/utils/mb/: CMakeLists.txt  encnames.c
src/backend/utils/mb/conversion_procs/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/ascii_and_mic/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/cyrillic_and_mic/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/euc2004_sjis2004/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/euc_cn_and_mic/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/euc_jp_and_sjis/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/euc_kr_and_mic/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/euc_tw_and_big5/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/latin2_and_win1250/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/latin_and_mic/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/utf8_and_ascii/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/utf8_and_big5/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/utf8_and_cyrillic/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/utf8_and_euc2004/: CMakeLists.txt
src/backend/utils/mb/conversion_procs/utf8_and_euc_cn/: CMakeLists.txt
src/backend/utils/misc/: CMakeLists.txt  faultinjector.c  guc_gp.c
src/backend/utils/mmgr/: CMakeLists.txt  memprot.c  portalmem.c
src/backend/utils/resgroup/: CMakeLists.txt
src/backend/utils/resource_manager/: CMakeLists.txt
src/backend/utils/resowner/: CMakeLists.txt
src/backend/utils/resscheduler/: CMakeLists.txt
src/backend/utils/sort/: CMakeLists.txt
src/backend/utils/time/: CMakeLists.txt
src/backend/utils/workfile_manager/: CMakeLists.txt
src/common/: CMakeLists.txt
src/interfaces/libpq/: CMakeLists.txt  fe-connect.c  fe-protocol3.c  libpq-int.h  pthread-win32.c
src/port/: CMakeLists.txt  chklocale.c  glob.c  pthread-gpdb-win32.c  pthread-gpdb-win32.h  pthread-win32.h
(+188 files in other folders)
